<resources>
    <string name="action_settings">Settings</string>
    <string name="action_photos">Photos</string>
    <string name="action_albums">Album</string>
    <string name="title_activity_picture_view">PictureViewActivity</string>
    <string name="label_size">Size</string>
    <string name="label_path">Path</string>
    <string name="label_lastModified">Last modified</string>
    <string name="action_info">Info</string>

    <!--nav-->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="menu_search">Favourites</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_camera">Camera</string>
    <string name="menu_photos">Photos</string>
    <string name="menu_albums">Albums</string>
    <string name="menu_account">Account</string>
    <string name="menu_favourites">Favourites</string>
    <string name="menu_delete">Delete</string>
    <string name="menu_share">Share</string>
    <string name="menu_edit">Edit</string>
    <string name="menu_info">Info</string>
    <string name="directory">Directory</string>
    <string name="action_check_update">Check for update</string>
    <string name="app_info_hint">Photos and gallery applications</string>
    <string name="action_menu_set_as">Use as</string>
    <string name="action_slide_show">SlideShow</string>
    <string name="menu_grid">Albums Grid</string>
    <string name="menu_albums_list">Albums list</string>
    <string name="menu_sort_by_date">Sort by Date</string>
    <string name="all_photos">All photos</string>
    <string name="app_nav_header_hint">Simple! made easy!</string>
    <string name="label_lastModified_time">Time</string>
    <string name="label_width">Width</string>
    <string name="label_height">Height</string>
    <string name="label_width_height">Width * Height</string>
    <string name="label_dimention">Dimension</string>
    <string name="default_notification_channel_id">gallery_fcm_id</string>
    <string name="feedback">Feedback</string>
    <string name="feedback_hint">write your suggesstions to make service you better in feature.</string>
    <string name="action_submit_feedback">Submit feeback</string>
    <string name="email_hint">your email address</string>
    <string name="email_mandatory">Email address is mandatory!</string>
    <string name="feebcak_cannot_be_empty">Feedback cannot be empty</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="action_rate_now">Rate Now</string>
    <string name="rate_our_app">Loving our App?</string>
    <string name="rate_our_app_hint">We\'are so happy to hear you love to use Gallery app, help supporting app to
        improve fearures and more.
    </string>
    <string name="rate_us">Rate us</string>
    <string name="feedback_submitted">Thank you for your valuable feedack!</string>
    <string name="please_try_agin">Please try again!</string>

</resources>
