<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/action_delete"
          android:title="@string/menu_delete"
          android:icon="@drawable/baseline_delete_outline_white_24"/>

    <item android:id="@+id/action_share"
          android:title="@string/menu_share"
          android:icon="@drawable/outline_share_white_24"
         />


    <!-- <item android:id="@+id/action_favourites"
           android:title="@string/menu_favourites"
           android:icon="@drawable/ic_favorite_border_black_24dp"/>-->

    <item android:id="@+id/action_edit"
          android:title="@string/menu_edit"
          android:icon="@drawable/ic_mode_edit_white_24dp"/>

     <item android:id="@+id/action_info"
           android:title="@string/menu_info"
           android:icon="@drawable/outline_info_white_24"/>

</menu>
