<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/action_photos"
          android:title="@string/menu_photos"
          android:icon="@drawable/baseline_crop_original_black_24"/>

    <item android:id="@+id/action_albums"
          android:title="@string/menu_albums"
          android:icon="@drawable/baseline_photo_library_black_24"/>


   <!-- <item android:id="@+id/action_favourites"
          android:title="@string/menu_favourites"
          android:icon="@drawable/ic_favorite_border_black_24dp"/>-->

    <item android:id="@+id/action_camera"
          android:title="@string/menu_camera"
          android:icon="@drawable/baseline_camera_black_24"/>

   <!-- <item android:id="@+id/action_account"
          android:title="@string/menu_account"
          android:icon="@drawable/ic_person_black_24dp"/>-->

</menu>
