<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:showIn="@layout/activity_info"
        tools:context=".ui.activity.InfoActivity">


    <ImageView
            app:layout_constraintTop_toTopOf="parent"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_200sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:id="@+id/imgInfo"
            android:layout_marginBottom="@dimen/_10sdp"/>


    <LinearLayout
            android:layout_margin="@dimen/_10sdp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/imgInfo"
            android:layout_marginTop="32dp"
            android:orientation="vertical">
        <LinearLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
            <TextView android:layout_width="match_parent"
                      android:layout_weight="1.5"
                      android:layout_height="wrap_content"
                      android:text="@string/label_size"
                      tools:layout_editor_absoluteY="309dp"
                      tools:layout_editor_absoluteX="33dp"/>

            <TextView android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:text=" : "
                      android:layout_marginEnd="@dimen/_10sdp"
                      tools:layout_editor_absoluteY="309dp"
                      tools:layout_editor_absoluteX="206dp"
                      android:textColor="@color/colorAccent"
                      android:textStyle="bold" android:layout_marginRight="@dimen/_10sdp"/>

            <TextView android:layout_width="match_parent"
                      android:layout_weight="1"
                      android:layout_height="wrap_content"
                      android:text="@string/action_photos"
                      tools:layout_editor_absoluteY="309dp"
                      tools:layout_editor_absoluteX="206dp"
                      android:id="@+id/txtSize"
                      android:textColor="@color/colorAccent"
                      android:textStyle="bold"/>
        </LinearLayout>

        <LinearLayout
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
            <TextView android:layout_width="match_parent"
                      android:layout_weight="1.5"
                      android:layout_height="wrap_content"
                      android:text="@string/label_path"
                      tools:layout_editor_absoluteY="309dp"
                      tools:layout_editor_absoluteX="33dp"/>

            <TextView android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:text=" : "
                      android:layout_marginEnd="@dimen/_10sdp"
                      tools:layout_editor_absoluteY="309dp"
                      tools:layout_editor_absoluteX="206dp"
                      android:textColor="@color/colorAccent"
                      android:textStyle="bold" android:layout_marginRight="@dimen/_10sdp"/>

            <TextView android:layout_width="match_parent"
                      android:layout_weight="1"
                      android:layout_height="wrap_content"
                      android:text="@string/action_photos"
                      tools:layout_editor_absoluteY="309dp"
                      tools:layout_editor_absoluteX="206dp"
                      android:id="@+id/txtPath"
                      android:textColor="@color/colorAccent"
                      android:textStyle="bold"/>
        </LinearLayout>

        <LinearLayout
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
            <TextView android:layout_width="match_parent"
                      android:layout_weight="1.5"
                      android:layout_height="wrap_content"
                      android:text="@string/label_lastModified"
                      tools:layout_editor_absoluteY="309dp"
                      tools:layout_editor_absoluteX="33dp"/>

            <TextView android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:text=" : "
                      android:layout_marginEnd="@dimen/_10sdp"
                      tools:layout_editor_absoluteY="309dp"
                      tools:layout_editor_absoluteX="206dp"
                      android:textColor="@color/colorAccent"
                      android:textStyle="bold" android:layout_marginRight="@dimen/_10sdp"/>

            <TextView android:layout_width="match_parent"
                      android:layout_weight="1"
                      android:layout_height="wrap_content"
                      android:text="@string/action_photos"
                      tools:layout_editor_absoluteY="309dp"
                      tools:layout_editor_absoluteX="206dp"
                      android:id="@+id/txtLastModified"
                      android:textColor="@color/colorAccent"
                      android:textStyle="bold"/>
        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>