<?xml version="1.0" encoding="utf-8"?>
<LinearLayout

        xmlns:tools="http://schemas.android.com/tools" android:background="@color/colorWhite"
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="match_parent">

        <include layout="@layout/toolbar"/>

        <include layout="@layout/container_ly"/>

        <androidx.core.widget.NestedScrollView
                android:background="@color/colorWhite"
                android:layout_width="match_parent"
                android:layout_height="match_parent">


            <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">


                <androidx.constraintlayout.widget.ConstraintLayout

                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" app:layout_constraintTop_toTopOf="parent">


                    <TextView
                            android:visibility="visible"
                            android:id="@+id/txtFeedbackTitle"
                            android:layout_margin="@dimen/_6sdp"
                            android:text="@string/app_name"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="monospace"
                            android:typeface="monospace"
                            android:textSize="@dimen/_11sdp"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            android:layout_marginLeft="300dp" android:layout_marginStart="300dp"
                            app:layout_constraintTop_toBottomOf="@+id/imageView3"/>

                    <TextView
                            android:text="@string/rate_our_app"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/txtRateApp"
                            android:fontFamily="monospace"
                            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                            android:typeface="monospace"
                            android:textSize="@dimen/_20sdp"
                            app:layout_constraintStart_toStartOf="parent"
                            android:layout_marginTop="32dp"
                            app:layout_constraintTop_toBottomOf="@+id/txtFeedbackTitle"
                            android:layout_marginStart="32dp"
                            android:layout_marginEnd="32dp" app:layout_constraintHorizontal_bias="0.0"/>



                    <TextView
                            android:text="@string/rate_our_app_hint"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/txtRateAppHint"
                            android:fontFamily="monospace"
                            android:typeface="monospace"
                            android:textSize="@dimen/_12sdp"
                            app:layout_constraintStart_toStartOf="parent"
                            android:layout_marginTop="12dp"
                            app:layout_constraintTop_toBottomOf="@+id/txtRateApp"
                            android:layout_marginStart="32dp"
                            android:layout_marginEnd="32dp" app:layout_constraintHorizontal_bias="0.0"/>



                    <Button
                            android:id="@+id/btnRateNow"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@color/colorAccent"
                            android:text="@string/action_rate_now"
                            android:textColor="@android:color/white"
                            app:layout_constraintStart_toStartOf="parent"
                            android:layout_marginStart="32dp"
                            app:layout_constraintEnd_toEndOf="parent"
                            android:layout_marginEnd="32dp"
                            app:layout_constraintTop_toBottomOf="@+id/txtRateAppHint"
                            android:layout_marginTop="32dp"
                            app:layout_constraintHorizontal_bias="0.0"/>


                    <ImageView
                            android:layout_width="71dp"
                            android:layout_height="71dp"
                            app:srcCompat="@drawable/gallery_app_logo_512"
                            android:id="@+id/imageView3"
                            android:layout_marginTop="18dp"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                    />


                </androidx.constraintlayout.widget.ConstraintLayout>


            </LinearLayout>

        </androidx.core.widget.NestedScrollView>


</LinearLayout>
