<?xml version="1.0" encoding="utf-8"?>
<LinearLayout

        xmlns:tools="http://schemas.android.com/tools" android:background="@color/colorWhite"
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="match_parent">

        <include layout="@layout/toolbar"/>

        <include layout="@layout/container_ly"/>

        <androidx.core.widget.NestedScrollView
                android:background="@color/colorWhite"
                android:layout_width="match_parent"
                android:layout_height="match_parent">


            <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">


                <androidx.constraintlayout.widget.ConstraintLayout

                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" app:layout_constraintTop_toTopOf="parent">


                    <TextView
                            android:id="@+id/txtFeedbackTitle"
                            android:visibility="gone"
                            android:layout_margin="@dimen/_6sdp"
                            android:text="@string/app_name"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="monospace"
                            android:typeface="monospace"
                            android:textSize="@dimen/_12sdp"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            android:layout_marginLeft="300dp" android:layout_marginStart="300dp"
                            app:layout_constraintTop_toBottomOf="@+id/imageView3"/>

                    <com.rengwuxian.materialedittext.MaterialEditText
                            android:id="@+id/txtFeedbackEmail"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            app:met_underlineColor="@color/colorPrimaryDark"
                            android:hint="@string/email_hint"
                            android:focusedByDefault="false"
                            android:textColor="@color/colorGrey"
                            android:inputType="textWebEmailAddress"
                            android:fontFamily="sans-serif-medium"
                            android:typeface="monospace"
                            android:textSize="@dimen/_12sdp"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/txtFeedbackTitle"
                            android:layout_marginTop="24dp"
                            android:layout_marginStart="@dimen/_16sdp"
                            app:met_iconLeft="@drawable/ic_email_black_24dp"
                            android:layout_marginEnd="@dimen/_16sdp"
                            tools:ignore="UnusedAttribute"/>


                    <com.rengwuxian.materialedittext.MaterialEditText
                            android:id="@+id/txtFeedback"
                            app:met_iconLeft="@drawable/baseline_rate_review_black_24"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:maxLength="200"
                            android:maxLines="3"
                            android:focusedByDefault="false"
                            android:inputType="textMultiLine"
                            android:imeOptions="actionNone"
                            app:met_underlineColor="@color/colorPrimaryDark"
                            app:met_maxCharacters="180"
                            android:hint="@string/feedback_hint"
                            android:textColor="@color/colorGrey"
                            android:scrollbarStyle="outsideOverlay"
                            android:scrollbars="vertical"
                            android:overScrollMode="always"
                            android:ems="2"
                            android:lines="4"
                            android:scrollHorizontally="false"
                            android:fontFamily="sans-serif-medium"
                            android:typeface="monospace"
                            android:textSize="@dimen/_12sdp"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/txtFeedbackEmail"
                            android:layout_marginTop="14dp"
                            android:layout_marginStart="@dimen/_16sdp"
                            android:layout_marginEnd="@dimen/_16sdp" tools:ignore="UnusedAttribute"/>

                    <Button
                            android:id="@+id/btnSubmitFeedback"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@color/colorAccent"
                            android:text="@string/action_submit_feedback"
                            android:textColor="@android:color/white"
                            app:layout_constraintStart_toStartOf="parent"
                            android:layout_marginStart="@dimen/_16sdp"
                            app:layout_constraintEnd_toEndOf="parent"
                            android:layout_marginEnd="@dimen/_16sdp"
                            app:layout_constraintTop_toBottomOf="@+id/txtFeedback"
                            android:layout_marginTop="20dp" app:layout_constraintHorizontal_bias="0.0"/>

                    <ProgressBar
                            android:layout_margin="@dimen/_16sdp"
                            android:visibility="gone"
                            android:id="@+id/progressBarCircular"
                            android:layout_gravity="center"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:layout_marginBottom="8dp"
                            app:layout_constraintBottom_toTopOf="@+id/btnSubmitFeedback"
                            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
                            android:layout_marginRight="8dp" app:layout_constraintStart_toStartOf="parent"
                            android:layout_marginLeft="8dp" android:layout_marginStart="8dp"/>
                    <ImageView
                            android:visibility="gone"
                            android:layout_width="@dimen/_61sdp"
                            android:layout_height="@dimen/_61sdp"
                            app:srcCompat="@drawable/gallery_app_logo_512"
                            tools:layout_editor_absoluteX="127dp" android:id="@+id/imageView3"
                            android:layout_marginTop="8dp"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                    />


                </androidx.constraintlayout.widget.ConstraintLayout>


            </LinearLayout>

        </androidx.core.widget.NestedScrollView>


</LinearLayout>
